bugfix: dropdown close state, preselections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <br>
 <button (click)="isVisible = !isVisible">close</button>
 <br>
-<button (click)="disable()">disable</button>
+<button (click)="reset()">reset</button>
 <br>
 <div>
     <ng-container *ngFor="let d of receivedData">
